Atualizado página cadastro

--- a/cadastro.html
+++ b/cadastro.html
@@ -36,50 +36,75 @@
 
     <div class="centro"></div>
 
-    <div class="formulario2" <p Importante: No ato do cadastro, informe apenas dados verdadeiros! Os dados são
-        importantes para comprovar a titularidade da conta e são o único meio da nossa central de suporte entrar em
-        contato com você para ajudá-lo, caso precise.</p>
+    <div class="titulo1">
+        <h6> Importante: No ato do cadastro, informe apenas dados verdadeiros! Os dados são importantes para
+            comprovar a titularidade da conta e são o único meio da nossa central de suporte entrar em contato com
+            você para ajudá-lo caso precise. </h6>
+
+
     </div>
 
-    <div class="formulario1">
+    </div>
 
-        <form action="cabeçalho.html" method="post" name="nome" action="nomecompleto">
-            <p><label for="nome">Nome Completo: </label>
-                <input type="Nome" name="nome" maxlength="50" size="50" required>
-            </p>
+    <form>
+        <div id="nome">
 
-            <p><label for="email"> Email: </label>
-                <input type="Email" name="Email" maxlength="50" size="50" required>
-            </p>
+            <p class="nome">Nome Completo</p>
+            <input type="text" name="nome">
 
-            <p><label for="confirmação de email"> Confirmação de mail: </label>
-                <input type="Email" name="Confirmação de mail" maxlength="50" size="50" required>
-            </p>
+        </div>
 
-            <p><label for="email"> Data de Nascimento: </label>
-                <input type="Email" name="Data de Nascimento" maxlength="50" size="50" required>
-            </p>
+        <p class="email">E-mail</p>
 
-            <p><label for="email"> Usuario: </label>
-                <input type="Email" name="Usuario" maxlength="50" size="50" required>
-            </p>
 
-            <p><label for="email"> Senha: </label>
-                <input type="Email" name="Senha" maxlength="50" size="50" required>
-            </p>
+        <p class="confirmacao">Confirmacao de E-mail</p>
 
+
+        <p class="datanasc">Data de Nascimento</p>
+
+
+        <p class="usuario">Usuario</p>
+
+
+        <p class="senha">Senha</p>
+
+    </form>
+
+    <form>
+        <input class="nome1" type="text" name="nome">
+        <input class="email1" type="text" name="nome">
+        <input class="confirmacao1" type="text" name="nome">
+        <input class="datanasc1" type="text" name="nome">
+        <input class="usuario1" type="text" name="nome">
+        <input class="senha1" type="text" name="nome">
+
+
+    </form>
+
+
+    <div class="btn">
+        <form>
+            <INPUT TYPE="checkbox" NAME="OPCAO" VALUE="op1" checked>
 
         </form>
     </div>
 
-    <div class="formulario3">
-        <form action="cabeçalho.html" method="post">
-            <input type="submit" name="bt_Criar_conta" value="Criar conta">
-        </form>
+    </div>
+
+    <div class="titulo2">
+        <h6> Eu li e concordo com a Política de Privacidade. A Resgate Rápido não coleta intencionalmente dados de
+            crianças menores de 13 anos de idade. </h6>
+
 
     </div>
 
+    <div class="btncadastro">
+        </nav>
+        <a class="btncadastro2"></a>
+        <a class="btncadastro1" href="">CRIAR CONTA</a>
 
+
+    </div>
 
 
 
