27/05 - Atualizações do site

--- a/cadastro.html
+++ b/cadastro.html
@@ -30,8 +30,9 @@
 
 <body>
 
+
     <div class="fundo">
-        <img src="./imagens/personagem.jpg" alt="personagem_fundo" class="fundo">
+        <img src="./imagens/Fundo2.png" alt="personagem_fundo" class="fundo">
     </div>
 
     <div class="centro"></div>
@@ -98,10 +99,19 @@
 
     </div>
 
-    <div class="btncadastro">
+    <button class="btncadastro">
         </nav>
         <a class="btncadastro2"></a>
         <a class="btncadastro1" href="">CRIAR CONTA</a>
+
+
+    </button>
+
+    <div class="container">
+        <nav></nav>
+        <section>
+
+        </section>
 
 
     </div>
