--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
 <body>
 
     <div class="fundo">
-        <img src="./imagens/personagem.jpg" alt="personagem_fundo" class="fundo">
+        <img src="./imagens/Fundo2.png" alt="personagem_fundo" class="fundo">
     </div>
 
 
@@ -41,7 +41,21 @@
         </div>
         <div class="logocentro2"></div>
 
-        <div class="bloco-requisito"></div>
+        <div class="bloco-requisito">
+            <div class="textrequisitos">
+                <p>Requisitos mínimos do sistema:<br><br>
+
+                    Processador: Dual-core com frequencia de clock de pelo menos 2 GHz.<br>
+                    Memoria RAM: 2 GB.<br>
+                    Placa de video: Qualquer placa de video compativel com DirectX 10 ou superior.<br>
+                    Armazenamento: Pelo menos 500 MB de espaco livre no disco rigido.<br>
+                    Sistema operacional: Windows 7 ou posterior, macOS 10.10 ou posterior, ou uma distribuicao Linux
+                    compativel.</p>
+
+            </div>
+        </div>
+
+
 
 
 
