--- a/jogo.html
+++ b/jogo.html
@@ -32,7 +32,7 @@
 <body>
 
     <div class="fundo">
-        <img src="./imagens/personagem.jpg" alt="personagem_fundo" class="fundo">
+        <img src="./imagens/Fundo2.png" alt="personagem_fundo" class="fundo">
     </div>
 
     <div class="jogo"></div>
