--- a/historia.html
+++ b/historia.html
@@ -30,10 +30,30 @@
         <img src="./imagens/Fundo2.png" alt="personagem_fundo" class="fundo">
     </div>
 
-    <div class="historia1"></div>
+    <div class="historia1">
+        <div class="historiapai">
+            <p>Pai Corajoso:<br><br> o personagem principal e protagonista do jogo. <br>Ele e um pai em busca de salvar
+                sua
+                filha
+                das garras do assassino.<br> <br> Pai Corajoso embarca em uma jornada perigosa e emocionante para
+                resgatar
+                sua filha das garras do assassino. Determinado e destemido, ele enfrenta uma serie de desafios e
+                obstaculos ao longo do caminho.</p>
+        </div>
+    </div>
     <div class="historia2"></div>
     <div class="historia3"></div>
-    <div class="historia4"></div>
+    <div class="historia4">
+        <div class="historiaassassino">
+            <p>
+                Assassino: <br><br> o principal antagonista do jogo. Ele e um assassino perigoso que sequestrou a filha
+                do pai corajoso.<br><br> O Assassino, um personagem sombrio e misterioso, e o principal antagonista do
+                jogo. Ele e conhecido por sua crueldade e frieza, espalhando o medo por onde passa. Sua identidade e
+                envolta em misterio, tornando-o ainda mais assustador e imprevisivel.
+
+            </p>
+        </div>
+    </div>
 
 
 
