--- a/jogo.html
+++ b/jogo.html
@@ -36,11 +36,23 @@
     </div>
 
     <div class="jogo"></div>
-    <div class="jogo1"></div>
-    <div class="jogo2"></div>
-    <div class="jogo3"></div>
-    <div class="jogo4"></div>
-    <div class="jogo5"></div>
+    <div class="jogo1">
+        <img src="./imagens/Tela Montanha.png" alt="fase1" class="fase1">
+    </div>
+    <div class="jogo2">
+        <img src="./imagens/Tela Labirinto.png" alt="fase1" class="fase1">
+    </div>
+    <div class="jogo3">
+        <img src="./imagens/Tela Pântano.png" alt="fase1" class="fase1">
+    </div>
+    <div class="jogo4">
+        <img src="./imagens/Tela Cidade Abandonada.png" alt="fase1" class="fase1">
+    </div>
+    <div class="jogo5">
+        <img src="./imagens/Tela Templo.png" alt="fase1" class="fase1">
+    </div>
+
+
 
 
 
