Video inserido no site

--- a/jogo.html
+++ b/jogo.html
@@ -35,7 +35,12 @@
         <img src="./imagens/Fundo2.png" alt="personagem_fundo" class="fundo">
     </div>
 
-    <div class="jogo"></div>
+    <div class="jogo">
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/0mjI1OPcpok" frameborder="0"
+                allowfullscreen></iframe>
+        </div>
+    </div>
     <div class="jogo1">
         <img src="./imagens/Tela Montanha.png" alt="fase1" class="fase1">
     </div>
