Site Finalizado - Alex

--- a/historia.html
+++ b/historia.html
@@ -20,7 +20,8 @@
     <nav class="download">
 
     </nav>
-    <a class="download_botao" href="download.html">DOWNLOAD</a>
+    <a class="download_botao"
+        href="https://drive.google.com/file/d/1rcDewe7ec9mZvvwqTDQ3Z8ChUN-2_Xsa/view?usp=share_link">DOWNLOAD</a>
     <img src="./imagens/foto2.jpeg" alt="Logo do site" class="logo">
 
 </header>
@@ -41,8 +42,12 @@
                 obstaculos ao longo do caminho.</p>
         </div>
     </div>
-    <div class="historia2"></div>
-    <div class="historia3"></div>
+    <div class="historia2">
+        <img src="./imagens/Pai.png" alt="pai" class="pai">
+    </div>
+    <div class="historia3">
+        <img src="./imagens/Assassino.png" alt="pai" class="assassino">
+    </div>
     <div class="historia4">
         <div class="historiaassassino">
             <p>
