--- a/home.html
+++ b/home.html
@@ -20,7 +20,8 @@
     <nav class="download">
 
     </nav>
-    <a class="download_botao" href="download.html">DOWNLOAD</a>
+    <a class="download_botao"
+        href="https://drive.google.com/file/d/1rcDewe7ec9mZvvwqTDQ3Z8ChUN-2_Xsa/view?usp=share_link">DOWNLOAD</a>
     <img src="./imagens/foto2.jpeg" alt="Logo do site" class="logo">
 
 </header>
@@ -33,7 +34,9 @@
 
 
     <section class="container-slide">
-        <div class="slider"></div>
+        <div class="sliderbar">
+            <img src="./imagens/ResgatePerigoso.gif" alt="GIF Animado" width="512" height="288" autoplay>
+        </div>
 
 
         <div class="logocentro">
