--- a/jogo.html
+++ b/jogo.html
@@ -21,7 +21,8 @@
     <nav class="download">
 
     </nav>
-    <a class="download_botao" href="download.html">DOWNLOAD</a>
+    <a class="download_botao"
+        href="https://drive.google.com/file/d/1rcDewe7ec9mZvvwqTDQ3Z8ChUN-2_Xsa/view?usp=share_link">DOWNLOAD</a>
     <img src="./imagens/foto2.jpeg" alt="Logo do site" class="logo">
 
 
